[tool.poetry]
name = "dockerfile-lib"
version = "0.1.0"
description = ""
authors = ["Cristian Posoiu"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
